Update to Gradle 5 and drastically simplify build
__Motivation__

Gradle 5 has been out for a while and it's more than time to update.
It provides out-of-the-box features that we had to code ourselves (like test fixtures)
or use 3rd party plugins for (like Spring Dependencies for BOM creation).

Moreover, the fact we use a composite build in case one day the repo gets broken apart
complicates our build and prevents basic features to work properly.

__Modifications__

- Upgrade to Gradle 5
- Upgrade plugins and tools
- Switch to a regular multi-projects build
- Still use and publish a custom build plugin to allow other builds to use consistent plugins/settings/versions
- Use standard test fixtures instead of our custom ones
- Use standard BOM creation and import

__Results__

ServiceTalk can follow Gradle updates without fear of breaking the build!