@@ -1,5 +1,5 @@
 /*
- * Copyright © 2018 Apple Inc. and the ServiceTalk project authors
+ * Copyright © 2018-2019 Apple Inc. and the ServiceTalk project authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,60 +18,110 @@ package io.servicetalk.gradle.plugin.internal
 import org.gradle.api.GradleException
 import org.gradle.api.Plugin
 import org.gradle.api.Project
-import org.gradle.api.publish.maven.MavenPublication
+import org.gradle.api.XmlProvider
+import org.gradle.api.plugins.quality.Checkstyle
 
 import static io.servicetalk.gradle.plugin.internal.ProjectUtils.addBuildContextExtensions
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.appendNodes
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.copyResource
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.enforceUtf8FileSystem
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.locateBuildLevelConfigFile
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.writeToFile
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.TARGET_VERSION
 
 class ServiceTalkCorePlugin implements Plugin<Project> {
   void apply(Project project) {
-    def fenc = System.getProperty("file.encoding")
-    if (!"UTF-8".equalsIgnoreCase(fenc)) {
-      throw new GradleException("File encoding must be UTF-8 but is $fenc, consider using a file system that " +
-          "supports it or setting the JAVA_TOOL_OPTIONS env var to: -Dfile.encoding=UTF-8");
-    }
-
-    if (project.subprojects) {
-      project.subprojects {
-        configureProject it
-      }
-    } else {
-      configureProject project
-    }
-  }
-
-  private static void configureProject(Project project) {
+    enforceUtf8FileSystem()
     addBuildContextExtensions project
-    applyJavaPlugins project
-    configureTests project
+    applyCheckstylePlugin project
+    applyIdeaPlugin project
+    applyBintrayPlugin project
   }
 
-  private static void applyJavaPlugins(Project project) {
+  private static void applyCheckstylePlugin(Project project) {
     project.configure(project) {
-      pluginManager.apply("java")
-      pluginManager.apply("maven-publish")
-      pluginManager.apply("com.jfrog.bintray")
+      pluginManager.apply("checkstyle")
 
-      sourceCompatibility = 1.8
-      targetCompatibility = 1.8
+      checkstyle {
+        toolVersion = "8.24"
+        configDir = file("$buildDir/checkstyle")
+      }
 
-      publishing {
-        publications {
-          mavenJava(MavenPublication) {
-            // set compile -> runtime deps
-            // see http://forums.gradle.org/gradle/topics/maven_publish_plugin_generated_pom_making_dependency_scope_runtime
-            pom.withXml { provider ->
-              provider.asNode().dependencies.dependency.findAll { pomDep ->
-                project.configurations["compile"].dependencies.any { dep ->
-                  dep.group == pomDep.groupId.text() &&
-                      dep.name == pomDep.artifactId.text()
-                }
-              }.each {
-                it.scope*.value = "compile"
-              }
-            }
+      // Overwrite the default set of file for Checkstyle analysis from only java files to all files of the source set
+      // See: https://docs.gradle.org/current/dsl/org.gradle.api.plugins.quality.Checkstyle.html#org.gradle.api.plugins.quality.Checkstyle:source
+      if (project.findProperty("sourceSets")) {
+        sourceSets.all {
+          tasks.getByName(it.getTaskName("checkstyle", null)).setSource(it.getAllSource())
+        }
+      }
+
+      project.task("checkstyleResources") {
+        description = "Copy Checkstyle resources to its configuration directory"
+        group = "verification"
+
+        if (tasks.findByName("clean")) {
+          mustRunAfter clean
+        }
+
+        doLast {
+          copyResource("checkstyle/checkstyle.xml", checkstyle.configDir)
+          copyResource("checkstyle/global-suppressions.xml", checkstyle.configDir)
+          copyResource("checkstyle/copyright-slashstar-style.header", checkstyle.configDir)
+          copyResource("checkstyle/copyright-xml-style.header", checkstyle.configDir)
+          copyResource("checkstyle/copyright-script-style.header", checkstyle.configDir)
+          copyResource("checkstyle/copyright-sh-script-style.header", checkstyle.configDir)
+
+          File checkstyleLocalSuppressionsFile = locateBuildLevelConfigFile(project, "/gradle/checkstyle/suppressions.xml")
+          if (checkstyleLocalSuppressionsFile.exists()) {
+            writeToFile(checkstyleLocalSuppressionsFile.text, checkstyle.configDir, "local-suppressions.xml")
           }
         }
       }
+
+      project.task("checkstyleRoot", type: Checkstyle) {
+        description = "Run Checkstyle analysis for files in the root directory"
+        // The classpath field must be non-null, but could be empty because it's not required for this task:
+        classpath = project.files([])
+        source = fileTree(".") {
+          includes = ["docker/**", "gradle/**", "*.gradle", "*.properties", "scripts/**"]
+          excludes = ["gradle/wrapper/**"]
+        }
+      }
+
+      tasks.withType(Checkstyle).all {
+        group = "verification"
+        it.dependsOn checkstyleResources
+      }
+
+      project.task("checkstyle") {
+        description = "Run Checkstyle analysis for all source sets"
+        group = "verification"
+        dependsOn tasks.withType(Checkstyle)
+      }
+    }
+  }
+
+  private static void applyIdeaPlugin(Project project) {
+    project.configure(project) {
+      pluginManager.apply("idea")
+
+      if (project.parent == null) {
+        idea.project.languageLevel = TARGET_VERSION.toString()
+        idea.project.targetBytecodeVersion = TARGET_VERSION
+
+        idea.project.ipr.withXml { XmlProvider provider ->
+          appendNodes(provider, getClass().getResourceAsStream("idea/ipr-components.xml"))
+        }
+        idea.workspace.iws.withXml { XmlProvider provider ->
+          appendNodes(provider, getClass().getResourceAsStream("idea/iws-components.xml"))
+        }
+      }
+    }
+  }
+
+  private static void applyBintrayPlugin(Project project) {
+    project.configure(project) {
+      pluginManager.apply("com.jfrog.bintray")
 
       def endsWithSnapshot = project.version.toString().toUpperCase().endsWith("-SNAPSHOT")
       if (project.ext.isReleaseBuild) {
@@ -102,27 +152,6 @@ class ServiceTalkCorePlugin implements Plugin<Project> {
           override = true
           publish = true
         }
-      }
-
-      if (!repositories) {
-        repositories {
-          jcenter()
-        }
-      }
-    }
-  }
-
-  private static void configureTests(Project project) {
-    project.configure(project) {
-      test {
-        testLogging {
-          events "passed", "skipped", "failed"
-          showStandardStreams = true
-        }
-
-        jvmArgs '-server', '-Xms2g', '-Xmx4g', '-dsa', '-da', '-ea:io.servicetalk...',
-            '-XX:+AggressiveOpts', '-XX:+TieredCompilation', '-XX:+UseBiasedLocking',
-                '-XX:+OptimizeStringConcat', '-XX:+HeapDumpOnOutOfMemoryError'
       }
     }
   }
