@@ -1,5 +1,5 @@
 /*
- * Copyright © 2018 Apple Inc. and the ServiceTalk project authors
+ * Copyright © 2018-2019 Apple Inc. and the ServiceTalk project authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,7 @@
 package io.servicetalk.gradle.plugin.internal
 
 import com.github.spotbugs.SpotBugsTask
-import org.gradle.api.JavaVersion
 import org.gradle.api.Project
-import org.gradle.api.XmlProvider
-import org.gradle.api.plugins.quality.Checkstyle
 import org.gradle.api.plugins.quality.Pmd
 import org.gradle.api.publish.maven.MavenPublication
 import org.gradle.api.tasks.Exec
@@ -27,83 +24,34 @@ import org.gradle.api.tasks.SourceSet
 import org.gradle.api.tasks.SourceSetContainer
 import org.gradle.api.tasks.bundling.Jar
 import org.gradle.api.tasks.javadoc.Javadoc
-import org.gradle.plugins.ide.eclipse.EclipsePlugin
-import org.gradle.plugins.ide.idea.IdeaPlugin
-import org.gradle.plugins.ide.idea.model.Module
-import org.gradle.plugins.ide.idea.model.ModuleDependency
 
-import static ProjectUtils.addManifestAttributes
-import static ProjectUtils.appendNodes
-import static ProjectUtils.copyResource
-import static ProjectUtils.createJavadocJarTask
-import static ProjectUtils.createSourcesJarTask
-import static ProjectUtils.fixBomDependencies
-import static ProjectUtils.writeToFile
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.addManifestAttributes
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.addQualityTask
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.createJavadocJarTask
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.createSourcesJarTask
 import static io.servicetalk.gradle.plugin.internal.ProjectUtils.getOrCreateJavadocTask
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.locateBuildLevelConfigFile
+import static io.servicetalk.gradle.plugin.internal.ProjectUtils.TARGET_VERSION
 
-class ServiceTalkLibraryPlugin extends ServiceTalkCorePlugin {
+final class ServiceTalkLibraryPlugin extends ServiceTalkCorePlugin {
   void apply(Project project) {
-    super.apply(project)
+    super.apply project
 
-    applyDocPlugins project
-
-    if (project.subprojects) {
-      applyIdeaPlugin project
-      applyEclipsePlugin project
-
-      project.subprojects {
-        configureProject it
-      }
-    } else {
-      configureProject project
-    }
-  }
-
-  private static void configureProject(Project project) {
     applyJavaLibraryPlugin project
-    applyQualityPlugins project
-    applyIdeaPlugin project
-    applyEclipsePlugin project
-
-    // TODO apply japicmp plugin
-
     configureTestFixtures project
-  }
-
-  private static void applyDocPlugins(Project project) {
-    project.configure(project) {
-      pluginManager.apply("org.asciidoctor.convert")
-
-      asciidoctor {
-        sourceDir = file("docs")
-        logDocuments = true
-        attributes "source-highlighter": "coderay", "linkcss": true
-        resources {
-          from(sourceDir) {
-            include '*.png'
-          }
-        }
-      }
-
-      // Combine subproject javadocs into one directory
-      project.task("javadocAll", type: Javadoc) {
-        destinationDir = file("$buildDir/javadoc")
-        gradle.projectsEvaluated {
-          source files(subprojects.javadoc.source)
-          classpath = files(subprojects.javadoc.classpath)
-        }
-      }
-
-      project.task("publishDocs", type: Exec, dependsOn: [asciidoctor, "javadocAll"]) {
-        def script = getClass().getResourceAsStream("docs/publish-docs.sh").text
-        commandLine "sh", "-c", script
-      }
-    }
+    configureTests project
+    applyPmdPlugin project
+    applySpotBugsPlugin project
+    addQualityTask project
   }
 
   private static void applyJavaLibraryPlugin(Project project) {
     project.configure(project) {
       pluginManager.apply("java-library")
+      pluginManager.apply("maven-publish")
+
+      sourceCompatibility = TARGET_VERSION
+      targetCompatibility = TARGET_VERSION
 
       jar {
         addManifestAttributes(project, manifest)
@@ -130,128 +78,40 @@ class ServiceTalkLibraryPlugin extends ServiceTalkCorePlugin {
             from components.java
             artifact(javadocJar)
             artifact(sourcesJar)
-            fixBomDependencies(pom)
           }
         }
       }
     }
   }
 
-  public static void applyIdeaPlugin(Project project) {
+  private static void configureTestFixtures(Project project) {
     project.configure(project) {
-      pluginManager.apply("idea")
+      def fixturesDir = file("src/testFixtures/java")
+      def fixturesFilesCount = layout.files(fixturesDir).getAsFileTree().size()
 
-      if (project.parent == null) {
-        idea.project.languageLevel = "1.8"
-        idea.project.targetBytecodeVersion = JavaVersion.VERSION_1_8
+      if (fixturesFilesCount > 0) {
+        pluginManager.apply("java-test-fixtures")
 
-        idea.project.ipr.withXml { XmlProvider provider ->
-          appendNodes(provider, getClass().getResourceAsStream("idea/ipr-components.xml"))
-        }
-        idea.workspace.iws.withXml { XmlProvider provider ->
-          appendNodes(provider, getClass().getResourceAsStream("idea/iws-components.xml"))
-        }
-        idea.module.iml {
-          whenMerged { Module module ->
-            // BOM projects are broken dependencies in IDEA
-            module.dependencies = module.dependencies
-                .findAll { dep -> !(dep instanceof ModuleDependency && dep.name.contains("-bom")) }
+        idea {
+          module {
+            testSourceDirs += fixturesDir
           }
         }
       }
     }
   }
 
-  public static void applyEclipsePlugin(Project project) {
+  private static void configureTests(Project project) {
     project.configure(project) {
-      pluginManager.apply("eclipse")
-
-      // safer/easier to always regenerate
-      tasks.eclipse.dependsOn tasks.cleanEclipse
-
-      if (project.parent != null) {
-        // TODO review this when shading is finalized
-        // assumes all subprojects depend on (shaded) netty
-        // tasks.eclipseClasspath.dependsOn ":service-talk-core:shadedNettySourcesJar"
-
-        eclipse.classpath.file.withXml { XmlProvider provider ->
-          def xmlClasspath = provider.asNode()
-          for (entry in xmlClasspath.classpathentry) {
-            if (entry.@kind == "lib" && entry.@path.contains("netty-all-shaded")) {
-              entry.@sourcepath = entry.@path.replaceFirst(".jar", "-sources.jar")
-            }
-          }
-        }
-      }
-    }
-  }
-
-  private static void applyQualityPlugins(Project project) {
-    applyCheckstylePlugin project
-    applyPmdPlugin project
-    applySpotBugsPlugin project
-    addQualityTask project
-  }
-
-  public static void applyCheckstylePlugin(Project project) {
-    project.configure(project) {
-      pluginManager.apply("checkstyle")
-
-      checkstyle {
-        toolVersion = "8.16"
-        configDir = file("$buildDir/checkstyle")
-      }
-
-      // Overwrite the default set of file for Checkstyle analysis from only java files to all files of the source set
-      // See: https://docs.gradle.org/current/dsl/org.gradle.api.plugins.quality.Checkstyle.html#org.gradle.api.plugins.quality.Checkstyle:source
-      if (project.findProperty("sourceSets")) {
-        sourceSets.all {
-          tasks.getByName(it.getTaskName("checkstyle", null)).setSource(it.getAllSource())
-        }
-      }
-
-      project.task("checkstyleResources") {
-        description = "Copy Checkstyle resources to its configuration directory"
-        group = "verification"
-
-        if (tasks.findByName("clean")) {
-          mustRunAfter clean
+      test {
+        testLogging {
+          events "passed", "skipped", "failed"
+          showStandardStreams = true
         }
 
-        doLast {
-          copyResource("checkstyle/checkstyle.xml", checkstyle.configDir)
-          copyResource("checkstyle/global-suppressions.xml", checkstyle.configDir)
-          copyResource("checkstyle/copyright-slashstar-style.header", checkstyle.configDir)
-          copyResource("checkstyle/copyright-xml-style.header", checkstyle.configDir)
-          copyResource("checkstyle/copyright-script-style.header", checkstyle.configDir)
-          copyResource("checkstyle/copyright-sh-script-style.header", checkstyle.configDir)
-
-          File checkstyleLocalSuppressionsFile = file("$rootDir/gradle/checkstyle/suppressions.xml")
-          if (checkstyleLocalSuppressionsFile.exists()) {
-            writeToFile(checkstyleLocalSuppressionsFile.text, checkstyle.configDir, "local-suppressions.xml")
-          }
-        }
-      }
-
-      project.task("checkstyleRoot", type: Checkstyle) {
-        description = "Run Checkstyle analysis for files in the root directory"
-        // The classpath field must be non-null, but could be empty because it's not required for this task:
-        classpath = project.files([])
-        source = fileTree(".") {
-          includes = ["docker/**", "gradle/**", "*.gradle", "*.properties", "scripts/**"]
-          excludes = ["gradle/wrapper/**"]
-        }
-      }
-
-      tasks.withType(Checkstyle).all {
-        group = "verification"
-        it.dependsOn checkstyleResources
-      }
-
-      project.task("checkstyle") {
-        description = "Run Checkstyle analysis for all source sets"
-        group = "verification"
-        dependsOn tasks.withType(Checkstyle)
+        jvmArgs "-server", "-Xms2g", "-Xmx4g", "-dsa", "-da", "-ea:io.servicetalk...",
+            "-XX:+AggressiveOpts", "-XX:+TieredCompilation", "-XX:+UseBiasedLocking",
+                "-XX:+OptimizeStringConcat", "-XX:+HeapDumpOnOutOfMemoryError"
       }
     }
   }
@@ -261,7 +121,7 @@ class ServiceTalkLibraryPlugin extends ServiceTalkCorePlugin {
       pluginManager.apply("pmd")
 
       pmd {
-        toolVersion = "6.10.0"
+        toolVersion = "6.17.0"
         ruleSets = []
         ruleSetConfig = resources.text.fromString(getClass().getResourceAsStream("pmd/basic.xml").text)
       }
@@ -299,7 +159,7 @@ class ServiceTalkLibraryPlugin extends ServiceTalkCorePlugin {
       }
 
       sourceSets.all {
-        def exclusionFile = file("$rootDir/gradle/spotbugs/" + it.name + "-exclusions.xml")
+        def exclusionFile = locateBuildLevelConfigFile(project, "/gradle/spotbugs/" + it.name + "-exclusions.xml")
         if (exclusionFile.exists()) {
           tasks.getByName(it.getTaskName("spotbugs", null)) {
             excludeFilter = exclusionFile
@@ -311,95 +171,6 @@ class ServiceTalkLibraryPlugin extends ServiceTalkCorePlugin {
         description = "Run SpotBugs analysis for all source sets"
         group = "verification"
         dependsOn tasks.withType(SpotBugsTask)
-      }
-    }
-  }
-
-  public static void addQualityTask(Project project) {
-    project.configure(project) {
-      project.task("quality") {
-        description = "Run all quality analysers for all source sets"
-        group = "verification"
-        if (tasks.findByName("checkstyle")) {
-          dependsOn tasks.checkstyle
-        }
-        if (tasks.findByName("pmd")) {
-          dependsOn tasks.pmd
-        }
-        if (tasks.findByName("spotbugs")) {
-          dependsOn tasks.spotbugs
-        }
-      }
-    }
-  }
-
-  private static void configureTestFixtures(Project project) {
-    project.configure(project) {
-      File testFixturesFolder = file("$projectDir/src/testFixtures")
-      if (!testFixturesFolder.exists()) {
-        return
-      }
-
-      SourceSetContainer projectSourceSets = project.sourceSets
-      SourceSet testFixturesSourceSet = projectSourceSets.create("testFixtures") {
-        compileClasspath += projectSourceSets["main"].output
-        runtimeClasspath += projectSourceSets["main"].output
-      }
-
-      project.task("testFixturesJar", type: Jar) {
-        appendix = "testFixtures"
-        addManifestAttributes(project, manifest)
-        from testFixturesSourceSet.output
-      }
-
-      // for project dependencies
-      project.artifacts.add("testFixturesRuntime", testFixturesJar)
-
-      projectSourceSets.test.compileClasspath += testFixturesSourceSet.output
-      projectSourceSets.test.runtimeClasspath += testFixturesSourceSet.output
-
-      project.dependencies {
-        testFixturesImplementation project.configurations["implementation"]
-        testFixturesImplementation project.configurations["api"]
-        testFixturesRuntime project.configurations["runtime"]
-        testImplementation project.configurations["testFixturesImplementation"]
-        testRuntimeOnly project.configurations["testFixturesRuntime"]
-      }
-
-      def sourcesJarTask = createSourcesJarTask(project, testFixturesSourceSet)
-      project.tasks.findByName("jar").dependsOn(sourcesJarTask)
-      def javadocTask = getOrCreateJavadocTask(project, testFixturesSourceSet)
-      project.tasks.findByName("javadoc").dependsOn(javadocTask)
-      def javadocJarTask = createJavadocJarTask(project, testFixturesSourceSet)
-      project.tasks.findByName("jar").dependsOn(javadocJarTask)
-
-      publishing {
-        publications {
-          testFixtures(MavenPublication) {
-            artifactId = "$testFixturesJar.baseName-$testFixturesJar.appendix"
-            from new TestFixturesComponent(project)
-            artifact(testFixturesJar)
-            artifact(sourcesJarTask)
-            artifact(javadocJarTask)
-            fixBomDependencies(pom)
-          }
-        }
-      }
-
-      if (bintray.publications) {
-        bintray {
-          publications = ["mavenJava", "testFixtures"]
-        }
-      }
-
-      project.plugins.withType(IdeaPlugin) {
-        project.idea.module.testSourceDirs += testFixturesSourceSet.allSource.srcDirs
-        project.idea.module.scopes["TEST"].plus += [project.configurations["testFixturesRuntime"]]
-      }
-
-      project.plugins.withType(EclipsePlugin) {
-        project.eclipse.classpath.sourceSets += [testFixturesSourceSet]
-        project.eclipse.classpath.plusConfigurations += [project.configurations["testFixturesRuntime"]]
       }
     }
   }
